--- a/install_apache.yml
+++ b/install_apache.yml
@@ -7,14 +7,19 @@
   - name: update repository index
     apt:
       update_cache: yes
+    when: ansible_distribution in ["Debian", "Ubuntu"]
+
 
   - name: install apache2 package
     apt:
       name: apache2
-      state: absent
-#       state: latest
+#      state: absent
+      state: latest
+    when: ansible_distribution == "Ubuntu"
 
-  - name: add php support for php
+  - name: install qemu-guest-agent
     apt:
-      name: libapache2-mod-php
-      state: absent
+      name: qemu-guest-agent
+#      state: absent
+    when: ansible_distribution == "Ubuntu"
+
